# LMTree

./: CMakeLists.txt  Dataset.cpp  Dataset.hpp  LA_example.txt  Matrix.cpp  Matrix.hpp  Parameters.cpp  Parameters.hpp  ProgressBar.cpp  ProgressBar.hpp  README.md  TimerClock.cpp  TimerClock.hpp  calculation.cpp  run_LMTree.cpp  vector_calculation.cpp  vector_calculation.hpp
codes/FLOOD/: CMakeLists.txt  README.md  bounding_rectangle.h  constants.h  flood.cpp  floodlite.h  head.h  local_model.h  point.h  query.h  sort_tools.h
codes/LMTree/: CMakeLists.txt  Dataset.cpp  Dataset.hpp  Matrix.cpp  Matrix.hpp  Parameters.cpp  Parameters.hpp  ProgressBar.cpp  ProgressBar.hpp  TimerClock.cpp  TimerClock.hpp  calculation.cpp  calculation.hpp  run_LMTree.cpp  vector_calculation.cpp  vector_calculation.hpp
codes/LMTree/indexes/: IndexParameters.h  NewLMTree.cpp  NewLMTree.h  basic.cpp  basic.h
codes/Qdtree/: CMakeLists.txt  README.md  main.cpp  set_radius.cpp
codes/egnat/: CMakeLists.txt  README.md  egnat.hpp  run_egnat.cpp
codes/lims/: CMakeLists.txt  README.md  dis.h  dis_string.h  run_lims.cpp
codes/lims/caculateRef/: CaculateIValue.h  ChooseRef.h
codes/lims/common/: CalCirclePos.h  Constants.cpp  Constants.h  config.h
codes/lims/entities/: Point.cpp  Point.h  Reference.cpp  Reference.h
codes/lims/fileIO/: FileIO.cpp  FileIO.h
codes/lims/model/: PolynomialRegression.h
codes/lims/queryProcessing/: KNN.h  RangeQuery.h
codes/mtree/: CMakeLists.txt  README.md  entry.hpp  mnode.hpp  mtree.hpp  run_mtree.cpp
codes/mvptree/: CMakeLists.txt  README.md  datapoint.hpp  key.hpp  mvpnode.hpp  mvptree.hpp  run_mvptree.cpp
codes/pmtree/: CMakeLists.txt  DataMetric.cpp  DataMetric.h  MyFunc.cpp  MyFunc.h  PM_Tree.cpp  PM_Tree.h  README.md  run_pmtree.cpp
dataset/: LA_query.txt
indexes/: IndexParameters.h  NewLMTree.cpp  NewLMTree.h  basic.cpp  basic.h
nlohmann/: json.hpp
